[package]
name = "api"
version = "0.1.0"
edition = "2021"
authors = ["Anthony Collier <hello@acollier.dev>"]
description = "Provides API services."
repository = "https://github.com/disquote/disquote"
license = "AGPL-3.0-only"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_interaction = { git = "https://github.com/disquote/rusty-interaction", branch = "feat/resolved-data", features = ["handler"] }
actix-web = "3.3.3"
dotenv = "0.15.0"
env_logger = "0.9.0"
serde_json = "1.0.78"
image = { path = "../image" }